Changes in 0.8-1

	* Bug fix: Fixed broken CITATION file

Changes in 0.8

  * New feature: Vignette was added
  * New feature: Update of references, new CITATION file (after publication
	in JSS)

Changes in 0.7

  * New feature: Models can be specified using lavaan syntax now.
  * Bug fix: Print method for models created with specify_sem() showed
    wrong number of indicators for eta.
	* Bug fix: Fixed bug in get_d() so it works with k=0 now.
  * anova.emEst: now works with stats::print.anova()

Changes in 0.6

  * Bug fix: Adjusted mstep_qml so it works with new constraints option and
    can now be used within NSEMM again
  * Bug fix: Fixed computation of standard errors for summary function for
    indirect and direct2 approach
  * jordan: Added information for indicators for jordan data set
  * Removed: get_factor_scores() for now.

Changes in 0.5.1

  * Bug fix: Fixed function get_factor_scores() so it works with new
    argument constraints in specify_sem()
  * New methods: Exported new print methods

Changes in 0.5

  * specify_sem(): User visible changes: arguments interc.lat and
    interc.obs were removed; new argument constraints which lets user
    specify indirect and direct approach for SEMM and NSEMM; interactions
    need to be specified as eta1~xi1:xi2 now
  * New methods: print method for objects specified by specify_sem() of class
    singleClass, semm, and nsemm; print method for object of class emEst
    and qmlEst

Changes in 0.4.1

  * New function: get_factor_scores(), calculate Bartlett factor scores
    from parameter estimates
  * summary.emEst: Added print.likelihoods argument
  * em(): Changed argument logger to verbose and set default as FALSE
  * qml(): works with non-centered exogenous variables now; fixed bug,
    max.iter does what it is supposed to do now
  * estep_lms(): fixed weird error message: "Error in
    !all.equal(rowSums(P), rep(1, nrow(P))) : invalid argument type"

Changes in 0.3
